# redis-search-api

./: .env.example  Dockerfile  pyproject.toml
redis_search_api/: constants.py  db.py  embeddings.py  main.py
